# Emscripten-WASM-Template

./: CMakeLists.txt  README.md  package.json  vcpkg.json
.github/workflows/: deploy.yml
src/: ShaderLoader.cpp  ShaderLoader.h  index.html  main.cpp
src/shaders/: shader.wgsl
